# docs/openapi.yml
@@ -29,43 +29,42 @@ paths:
               schema:
                 type: object
                 properties:
-                  statusCode:
-                    type: integer
-                    format: number
-                    example: 200
-                  message:
+                  familyName:
                     type: string
-                    example: アカウント情報の取得に成功しました。
-                  data:
-                    type: object
-                    properties:
-                      familyName:
-                        type: string
-                      userId:
-                        type: number
-                      familyNameKana:
-                        type: string
-                      firstName:
-                        type: string
-                      firstNameKana:
-                        type: string
-                      email:
-                        type: string
-                      acquisitionPoint:
-                        type: integer
-                        description: 保有ポイント
-                      sendablePoint:
-                        type: integer
-                        description: 送信可能ポイント
-                    example:
-                      userId: 200
-                      familyName: 山田
-                      familyNameKana: ヤマダ
-                      firstName: 太郎
-                      firstNameKana: タロウ
-                      email: yamada@sample.com
-                      acquisitionPoint: 30000
-                      sendablePoint: 1000
+                  userId:
+                    type: number
+                  familyNameKana:
+                    type: string
+                  firstName:
+                    type: string
+                  firstNameKana:
+                    type: string
+                  email:
+                    type: string
+                  acquisitionPoint:
+                    type: integer
+                    description: 保有ポイント
+                  sendablePoint:
+                    type: integer
+                    description: 送信可能ポイント
+                example:
+                  userId: 200
+                  familyName: 山田
+                  familyNameKana: ヤマダ
+                  firstName: 太郎
+                  firstNameKana: タロウ
+                  email: yamada@sample.com
+                  acquisitionPoint: 30000
+                  sendablePoint: 1000
+                required:
+                  - userId
+                  - familyName
+                  - familyNameKana
+                  - firstName
+                  - firstNameKana
+                  - email
+                  - acquisitionPoint
+                  - sendablePoint
         '401':
           $ref: '#/components/responses/401UnauthorizedError'
         '500':
@@ -79,7 +78,6 @@ paths:
       description: |
         - セッションキーのユーザ情報を更新する
       requestBody:
-        required: true
         content:
           application/json:
             schema:
@@ -97,6 +95,9 @@ paths:
                 firstNameKana:
                   type: string
                   example: ホクサイ
+                email:
+                  type: string
+                  example: hoge@hoge.com
               required:
                 - firstName
                 - firstNameKana
@@ -111,20 +112,17 @@ paths:
               schema:
                 type: object
                 properties:
-                  statusCode:
-                    type: integer
-                    format: number
-                    example: 201
-                  message:
+                  status:
                     type: string
-                    example: アカウント情報の更新に成功しました。
-                  data:
-                    type: object
-                    example: null
+                    example: ok
+                required:
+                  - status
         '400':
           $ref: '#/components/responses/400Error'
         '401':
           $ref: '#/components/responses/401UnauthorizedError'
+        '404':
+          $ref: '#/components/responses/404Error'
         '500':
           $ref: '#/components/responses/500Error'
 components:
@@ -138,16 +136,11 @@ components:
     Error:
       type: object
       properties:
-        statusCode:
-          type: integer
-          format: int64
-          example: '400'
-        title:
-          type: string
-          example: パラメータエラー
         message:
           type: string
           example: 'name: cannot be blank.'
+      required:
+        - message
   responses:
     400Error:
       description: |
@@ -157,8 +150,6 @@ components:
           schema:
             $ref: '#/components/schemas/Error'
           example:
-            statusCode: '400'
-            title: パラメータエラー
             message: 'name: cannot be blank.'
     401UnauthorizedError:
       description: |
@@ -168,8 +159,6 @@ components:
           schema:
             $ref: '#/components/schemas/Error'
           example:
-            statusCode: '401'
-            title: 認証エラー
             message: 認証が失敗しました。再ログインしてください。
     404Error:
       description: |
@@ -179,8 +168,6 @@ components:
           schema:
             $ref: '#/components/schemas/Error'
           example:
-            statusCode: '404'
-            title: データが存在しないエラー
             message: データが存在しません。
     500Error:
       description: |
@@ -190,6 +177,4 @@ components:
           schema:
             $ref: '#/components/schemas/Error'
           example:
-            statusCode: '500'
-            title: サーバーエラー
             message: サーバー側で何らかのエラーが発生しました。時間をおいて再度アクセスしてください。
