# repository/userrepo/models.go
@@ -1,0 +1,47 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.26.0
+
+package userrepo
+
+import (
+	"time"
+)
+
+// 取引
+type Transactions struct {
+	// 取引の識別子
+	ID uint64
+	// 送信ユーザのID
+	SendingUserID uint64
+	// 受信ユーザのID
+	ReceivingUserID uint64
+	// 取引ポイント
+	TransactionPoint int32
+	// 取引日時
+	TransactionAt time.Time
+}
+
+// ユーザー
+type Users struct {
+	// ユーザーの識別子
+	ID int64
+	// 苗字
+	FamilyName string
+	// 苗字カナ
+	FamilyNameKana string
+	// 名前
+	FirstName string
+	// 名前カナ
+	FirstNameKana string
+	// メールアドレス
+	Email string
+	// パスワードハッシュ
+	Password string
+	// 送信可能ポイント
+	SendingPoint int32
+	// レコード作成日時
+	CreatedAt time.Time
+	// レコード修正日時
+	UpdateAt time.Time
+}
